--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@clerk/clerk-react": "^5.32.4",
+    "@react-three/drei": "^9.56.15",
+    "@react-three/fiber": "^8.15.13",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "humanize-duration": "^3.33.0",
@@ -22,6 +24,7 @@
     "react-toastify": "^11.0.5",
     "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.11",
+    "three": "^0.178.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
